--- a/contact.html
+++ b/contact.html
@@ -2,67 +2,94 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Contact Us - Sportify</title>
+  <title>Contact Us - Online Book Marketplace</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-900 text-white font-sans">
-
+<body class="bg-white text-gray-800 font-sans">
   <!-- Navbar -->
-  <header class="flex justify-between items-center px-8 py-4 bg-black/70">
-    <div class="text-xl font-bold">SPORTIFY</div>
-    <nav class="space-x-6 hidden md:flex">
-      <a href="index.html" class="hover:text-cyan-400">Home</a>
-      <a href="gear.html" class="hover:text-cyan-400">Gear</a>
-      <a href="brands.html" class="hover:text-cyan-400">Brands</a>
-      <a href="about.html" class="hover:text-cyan-400">About</a>
-      <a href="contact.html" class="text-cyan-400 font-semibold">Contact</a>
-    </nav>
-  </header>
-
-  <!-- Hero Section -->
-  <section class="relative h-64 bg-cover bg-center flex items-center justify-center" style="background-image: url('https://images.unsplash.com/photo-1520975918311-43d6f875ff6e');">
-    <div class="bg-black/60 w-full h-full absolute inset-0"></div>
-    <div class="relative z-10 text-center">
-      <h1 class="text-4xl md:text-5xl font-bold">Get In Touch</h1>
-      <p class="text-gray-300 mt-2">We’d love to hear from you!</p>
+  <nav class="flex justify-between items-center px-6 py-4 bg-black text-white">
+    <div class="text-2xl font-bold bg-teal-600 w-10 h-10 flex items-center justify-center rounded hover:bg-teal-700 transition">
+      Z
     </div>
-  </section>
+    <div class="space-x-6 text-sm">
+      <a href="recently added.html" class="hover:underline hover:text-teal-400 transition">Recently Added</a>
+      <a href="index1.html" class="hover:underline hover:text-teal-400 transition">Home</a>
+      <a href="login.html" class="hover:underline hover:text-teal-400 transition">Login</a>
+      <a href="reg.html" class="hover:underline hover:text-teal-400 transition">Sign Up</a>
+    </div>
+  </nav>
 
-  <!-- Contact Form -->
-  <section class="px-6 md:px-16 py-12 max-w-4xl mx-auto">
-    <h2 class="text-3xl font-semibold mb-6">Contact Us</h2>
-    <form class="space-y-6 bg-gray-800 p-6 rounded-md shadow-lg">
+  <!-- Contact Us Section -->
+  <div class="relative h-[60vh] bg-cover bg-center text-white" style="background-image: url('https://images.unsplash.com/photo-1512820790803-83ca734da794?auto=format&fit=crop&w=1950&q=80');">
+    <div class="absolute inset-0 bg-black bg-opacity-60"></div>
+    <div class="relative z-10 flex flex-col justify-center items-start h-full px-10">
+      <h1 id="contact-heading" class="text-3xl md:text-4xl font-semibold mb-4 hover:text-teal-400 transition">Get In Touch with Us</h1>
+      <p class="text-lg">We would love to hear from you! Whether you have a question, feedback, or suggestion, feel free to reach out to us.</p>
+    </div>
+  </div>
+
+  <!-- Contact Form Section -->
+  <div class="max-w-4xl mx-auto p-8">
+    <h2 class="text-2xl font-semibold mb-6 text-center">Contact Form</h2>
+    <form id="contact-form" class="bg-white p-6 rounded-lg shadow-lg space-y-6">
       <div>
-        <label class="block text-gray-300 mb-1" for="name">Name</label>
-        <input type="text" id="name" name="name" class="w-full bg-gray-700 border border-gray-600 rounded-md p-2 text-white" required>
+        <label for="name" class="block text-sm font-medium text-gray-700">Your Name</label>
+        <input type="text" id="name" name="name" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-teal-600" placeholder="Enter your name" required>
       </div>
+
       <div>
-        <label class="block text-gray-300 mb-1" for="email">Email</label>
-        <input type="email" id="email" name="email" class="w-full bg-gray-700 border border-gray-600 rounded-md p-2 text-white" required>
+        <label for="email" class="block text-sm font-medium text-gray-700">Email Address</label>
+        <input type="email" id="email" name="email" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-teal-600" placeholder="Enter your email" required>
       </div>
+
       <div>
-        <label class="block text-gray-300 mb-1" for="message">Message</label>
-        <textarea id="message" name="message" rows="5" class="w-full bg-gray-700 border border-gray-600 rounded-md p-2 text-white" required></textarea>
+        <label for="message" class="block text-sm font-medium text-gray-700">Your Message</label>
+        <textarea id="message" name="message" rows="4" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-teal-600" placeholder="Type your message here..." required></textarea>
       </div>
-      <button type="submit" class="bg-cyan-500 text-black px-6 py-2 rounded-md hover:bg-cyan-400 transition">
-        Send Message
-      </button>
+
+      <div class="text-center">
+        <button type="submit" class="bg-teal-600 text-white px-6 py-2 rounded-lg hover:bg-teal-700 transition">Send Message</button>
+      </div>
     </form>
-  </section>
-
-  <!-- Info Section -->
-  <section class="px-6 md:px-16 py-8 max-w-4xl mx-auto text-gray-300">
-    <h3 class="text-2xl font-semibold mb-4">Other Ways to Reach Us</h3>
-    <p><strong>Email:</strong> support@sportify.com</p>
-    <p><strong>Phone:</strong> +1 (555) 123-4567</p>
-    <p><strong>Address:</strong> 123 Fitness Avenue, New York, NY, USA</p>
-  </section>
+  </div>
 
   <!-- Footer -->
-  <footer class="bg-black/70 text-gray-400 text-sm py-6 px-8 text-center">
-    &copy; 2025 Sportify. All rights reserved.
+  <footer class="bg-black text-white py-6">
+    <div class="text-center">
+      <p>&copy; 2025 Online Book Marketplace. All rights reserved.</p>
+    </div>
   </footer>
 
+  <!-- JavaScript Section -->
+  <script>
+    // Heading interaction
+    const heading = document.getElementById("contact-heading");
+    heading.addEventListener("mouseover", () => {
+      heading.style.color = "#14b8a6"; // teal-500
+    });
+    heading.addEventListener("mouseout", () => {
+      heading.style.color = ""; // resets to original
+    });
+
+    // Form submission
+    const form = document.getElementById("contact-form");
+    form.addEventListener("submit", function (e) {
+      e.preventDefault();
+
+      const name = document.getElementById("name").value.trim();
+      const email = document.getElementById("email").value.trim();
+      const message = document.getElementById("message").value.trim();
+
+      if (name === "" || email === "" || message === "") {
+        alert("Please fill in all fields.");
+        return;
+      }
+
+      alert(`Thanks for contacting us, ${name}! We'll get back to you soon.`);
+
+      // Clear form
+      form.reset();
+    });
+  </script>
 </body>
 </html>
