--- a/index.html
+++ b/index.html
@@ -89,14 +89,14 @@
         <a href="task.html" class="text-primary hover:underline">View Project →</a>
       </div>
       <div class="p-6 bg-white dark:bg-gray-800 rounded-xl shadow-lg hover:shadow-2xl hover:-translate-y-2 transition-all">
-        <h3 class="text-xl font-semibold mb-2">💻 Portfolio Website</h3>
+        <h3 class="text-xl font-semibold mb-2">sportify</h3>
         <p class="text-gray-600 dark:text-gray-300 mb-3">Personal portfolio built with Tailwind CSS and JavaScript.</p>
         <a href="/protfolio/pro1.html" class="text-primary hover:underline">View Project →</a>
       </div>
       <div class="p-6 bg-white dark:bg-gray-800 rounded-xl shadow-lg hover:shadow-2xl hover:-translate-y-2 transition-all">
-        <h3 class="text-xl font-semibold mb-2">🧮 Calculator App</h3>
+        <h3 class="text-xl font-semibold mb-2">online book store</h3>
         <p class="text-gray-600 dark:text-gray-300 mb-3">A responsive calculator with smooth UI and keyboard input.</p>
-        <a href="#" class="text-primary hover:underline">View Project →</a>
+        <a href="/protfolio/index1.html" class="text-primary hover:underline">View Project →</a>
       </div>
     </div>
   </section>
@@ -119,5 +119,6 @@
   <script src="home.js"></script>
 </body>
 </html>
+
 
 
