--- a/about.html
+++ b/about.html
@@ -2,69 +2,64 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>About Us - Sportify</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>About Us - Car Rental System</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-900 text-white font-sans">
+<body class="bg-gray-100 text-gray-800">
 
-  <!-- Navbar -->
-  <header class="flex justify-between items-center px-8 py-4 bg-black/70">
-    <div class="text-xl font-bold">SPORTIFY</div>
-    <nav class="space-x-6 hidden md:flex">
-      <a href="index.html" class="hover:text-cyan-400">Home</a>
-      <a href="gear.html" class="hover:text-cyan-400">Gear</a>
-      <a href="brands.html" class="hover:text-cyan-400">Brands</a>
-      <a href="about.html" class="text-cyan-400 font-semibold">About</a>
-      <a href="contact.html" class="hover:text-cyan-400">Contact</a>
-    </nav>
-  </header>
+  <!-- Navigation -->
+  <nav class="bg-blue-700 py-4 px-6 md:px-12 text-white flex justify-between items-center shadow">
+    <div class="text-xl md:text-2xl font-bold">Car Rental System</div>
+    <button id="but" class="md:hidden text-white text-2xl">☰</button>
+    <ul id="menu" class="hidden md:flex flex-col md:flex-row gap-4 text-center absolute md:static bg-blue-700 w-full md:w-auto left-0 top-16 p-4 md:p-0 shadow-md md:shadow-none z-10">
+      <li><a href="task.html" class="block md:inline hover:underline">Home</a></li>
+      <li><a href="about.html" class="block md:inline hover:underline font-semibold">About</a></li>
+      <li><a href="serv.html" class="block md:inline hover:underline">Services</a></li>
+      <li><a href="co login.html" class="block md:inline hover:underline">Login</a></li>
+    </ul>
+  </nav>
 
-  <!-- Hero Section -->
-  <section class="relative h-64 bg-cover bg-center flex items-center justify-center" style="background-image: url('https://images.unsplash.com/photo-1594737625785-c95f5c6f637b');">
-    <div class="bg-black/60 w-full h-full absolute inset-0"></div>
-    <div class="relative z-10 text-center">
-      <h1 class="text-4xl md:text-5xl font-bold">About Sportify</h1>
-      <p class="text-gray-300 mt-2">Fueling your passion for sports with quality gear since 2015.</p>
+  <!-- About Section -->
+  <section class="max-w-5xl mx-auto px-6 py-12">
+    <h1 class="text-3xl md:text-4xl font-bold text-blue-700 mb-6">About Us</h1>
+
+    <p class="text-lg mb-6">
+      Welcome to <strong>Car Rental System</strong> — your trusted partner for reliable, convenient, and affordable car rentals.
+      Whether you're planning a weekend getaway, a business trip, or need a vehicle for everyday use, we have the perfect ride for you.
+    </p>
+
+    <div class="grid md:grid-cols-2 gap-8 items-center">
+      <img src="https://images.unsplash.com/photo-1549924231-f129b911e442?auto=format&fit=crop&w=800&q=80" alt="About Us Image" class="rounded-lg shadow-md">
+
+      <div>
+        <h2 class="text-2xl font-semibold mb-4">Why Choose Us?</h2>
+        <ul class="list-disc list-inside space-y-2 text-gray-700">
+          <li>Wide variety of vehicles from economy to luxury.</li>
+          <li>24/7 customer support and roadside assistance.</li>
+          <li>Flexible rental plans with transparent pricing.</li>
+          <li>Easy online booking with instant confirmation.</li>
+          <li>Locations across major cities in Pakistan and abroad.</li>
+        </ul>
+      </div>
     </div>
-  </section>
 
-  <!-- About Content -->
-  <section class="px-6 md:px-16 py-12 space-y-10 max-w-5xl mx-auto">
-    <div>
-      <h2 class="text-3xl font-semibold mb-4">Who We Are</h2>
-      <p class="text-gray-300 leading-relaxed">
-        Sportify is a premier destination for athletes, adventurers, and fitness enthusiasts. Whether you're
-        chasing your next marathon goal or hitting the gym hard, we deliver the best in class gear, shoes,
-        and performance wear. Our passion for sport drives our mission to equip every customer with reliable and inspiring products.
+    <div class="mt-10">
+      <h2 class="text-2xl font-semibold mb-4">Our Mission</h2>
+      <p>
+        Our mission is to make transportation easy and accessible for everyone. We aim to provide top-notch service,
+        maintain high-quality vehicles, and ensure your experience with us is smooth and stress-free.
       </p>
-    </div>
-
-    <div>
-      <h2 class="text-3xl font-semibold mb-4">Our Mission</h2>
-      <p class="text-gray-300 leading-relaxed">
-        Our mission is to empower every athlete – from beginner to elite – by providing high-quality gear
-        and exceptional service. We believe in promoting an active lifestyle and supporting our community
-        in every step of their fitness journey.
-      </p>
-    </div>
-
-    <div>
-      <h2 class="text-3xl font-semibold mb-4">Why Choose Sportify?</h2>
-      <ul class="text-gray-300 list-disc list-inside space-y-2">
-        <li>Top-tier brands like Nike, Adidas, and Under Armour</li>
-        <li>Affordable pricing and exclusive deals</li>
-        <li>Trusted by thousands of athletes worldwide</li>
-        <li>Fast, reliable shipping and secure checkout</li>
-        <li>Passionate customer support</li>
-      </ul>
     </div>
   </section>
 
   <!-- Footer -->
-  <footer class="bg-black/70 text-gray-400 text-sm py-6 px-8 text-center">
-    &copy; 2025 Sportify. All rights reserved.
+  <footer class="bg-blue-700 text-white text-center py-6 mt-12">
+    &copy; 2025 Car Rental System. All rights reserved.
   </footer>
+
+  <script src="about.js"></script>
+
 
 </body>
 </html>
